--- a/Phones_And_People/Content/Site.css
+++ b/Phones_And_People/Content/Site.css
@@ -22,3 +22,99 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+.popup {
+    position: static;
+    display: inline;
+    cursor: pointer;
+}
+
+    .popup .popuptext {
+        display: none;
+        position: static;
+        background-color: #fff;
+        border: 1px;
+        transition: 1s;
+        z-index: 1;
+        top: -5px;
+        left: 80px;
+        width: 200px;
+        /*width: 160px;
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        padding: 50px 0;
+        bottom: 100%;
+        left: 100%;
+        margin-left: -300px;*/
+    }
+
+
+        /* Toggle this class when clicking on the popup container (hide and show the popup) */
+        .popup .show {
+            display: block;
+            -webkit-animation: fadeIn 1s;
+            animation: fadeIn 1s
+        }
+
+    .popup .hidden {
+        display: block;
+        -webkit-animation: fadeIn 1s;
+        animation: fadeIn 1s
+    }
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.photo-small:hover {
+    cursor: pointer;
+}
+
+.photo-big {
+    visibility: hidden;
+    background-color: #272424;
+    height: 70%;
+    position: fixed;
+    width: 70%;
+    z-index: 100;
+}
+
+#mask {
+    background-color: rgba(0,0,0,.9);
+    display: none;
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index:1;
+}
+
+#btn-search {
+    display: grid;
+    place-items: center;
+}
+
+.txt, .my-btn {
+    margin: 5px;
+    width: 70px;
+}
