--- a/Phones_And_People/Views/Shared/_Layout.cshtml
+++ b/Phones_And_People/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     @Scripts.Render("~/scripts/jquery-3.6.0.js")
     @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
     @Scripts.Render("~/bundles/modernizr")
-    <title>@ViewBag.Title - Телефонный справочник</title>
+    <title>@ViewBag.Title2 - Телефонный справочник</title>
 
 </head>
 <body class="body-content">
@@ -21,13 +21,23 @@
                     </button>
                     @Html.ActionLink("Телефонный справочник", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"> 
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Домой", "Personal", "Account")</li>
+                        <li>@Html.ActionLink("О сайте", "About", "Home")</li>
+                        <li>@Html.ActionLink("Контакты", "Contact", "Home")</li>
+                    </ul>
+                    <ul class="nav navbar-nav dwnld">
+                        <li class="pull-right">@Html.ActionLink("Загрузить еще", "AddUsers", "Home")</li>
+                    </ul>
+                    @*<ul class="nav navbar-nav navbar-right">
+                        <li class="pull-right">@Html.ActionLink("Регистрация", "Register", "Account")</li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="pull-right">@Html.ActionLink("Войти", "Login", "Account")</li>
+                    </ul>*@
+                    @Html.Partial("_LoginPartial")
+                </div>
         </div>
     </div>
     <div class="container body-content">
